Cherry-pick r271404. rdar://problem/76413093

Safari Networking high % CPU when Caches/WebKit/ServiceWorkers folder not writable
    https://bugs.webkit.org/show_bug.cgi?id=220220
    <rdar://problem/72930195>

    Reviewed by Chris Dumez.

    In case writing changes in the service worker database fails, we retry once.
    If it fails, we give up and will only retry writing when new changes happen.
    Manually tested.

    * workers/service/server/RegistrationDatabase.cpp:
    (WebCore::RegistrationDatabase::pushChanges):
    (WebCore::RegistrationDatabase::schedulePushChanges):
    * workers/service/server/RegistrationDatabase.h:

    Canonical link: https://commits.webkit.org/232964@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271404 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/232923.309@safari-611-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-611-branch@275688 268f45cc-cd09-0410-ab3c-d52691b4dbfc